PA_Education/TestMenifest/force-app/main/default/objects/EformsignTemplateField__c/EformsignTemplateField__c.object-meta.xml
<CustomObject>
    <label>eformsign Template Field</label>
    <nameField>
        <label>EformsignTemplateField Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>