PA_Education/TestMenifest/force-app/main/default/objects/EformsignTemplateField__c/fields/EformsignTemplate__c.field-meta.xml
<CustomField>
    <fullName>EformsignTemplate__c</fullName>
    <label>이폼사인 템플릿</label>
    <referenceTo>EformsignTemplate__c</referenceTo>
    <relationshipLabel>eformsign Template Field</relationshipLabel>
    <relationshipName>eformsign_Template_Field</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>