PA_Education/TestMenifest/force-app/main/default/objects/EformsignTemplateField__c/fields/TargetFieldApiName__c.field-meta.xml
<CustomField>
    <fullName>TargetFieldApiName__c</fullName>
    <label>대상 필드 API명</label>
    <length>255</length>
    <type>Text</type>
</CustomField>