PA_Education/TestMenifest/force-app/main/default/objects/EformsignTemplateField__c/fields/TargetFieldType__c.field-meta.xml
<CustomField>
    <fullName>TargetFieldType__c</fullName>
    <label>Target Field Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>